--- a/parent/package.json
+++ b/parent/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "core-js": "^3.17.2",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "zone.js": "^0.11.4"
   }
 }
